<resources>

    <string name="app_name">SimonDice</string>
    <string name="developer">Creado por Ariel Fuentes</string>

    <string name="titulo">Simon Dice</string>
    <string name="TituloOpciones">Modo de Juegos:</string>
    <string name="Modo1">Modo Normal</string>
    <string name="Modo2">Modo Dificil - Muy Pronto</string>

    <string name="Puntaje">Puntaje - </string>
    <string name="Nivel">- Nivel </string>

    <string name="PuntajeMax">Mejor Puntaje - </string>
    <string name="NumPuntajeMax">000000</string>
    <string name="NivelMax">Mejor Niv. </string>
    <string name="NumNivelMax">1</string>

    <string name="frace">¡Empecemos!</string>
    <string name="contador">10</string>
    <string name="tiempo">00</string>

    <string name="Arriba">Desliza el dedo hacia arriba</string>
    <string name="Abajo">Desliza el dedo hacia abajo</string>
    <string name="Derecha">Desliza el dedo hacia la derecha</string>
    <string name="Izquierda">Desliza el dedo hacia la izquierda</string>

    <string-array name="actividades">
        <item>Desliza el dedo hacia arriba</item>
        <item>Desliza el dedo hacia abajo</item>
        <item>Desliza el dedo hacia la izquierda</item>
        <item>Desliza el dedo hacia la derecha</item>
        <item>Agita el teléfono</item>
    </string-array>

    <string name="Agitado">Agita el teléfono</string>

    <string name="Correcto">!BIEN¡</string>
    <string name="Incorrecto">Error</string>

    <string name="Perdiste">Perdiste</string>
    <string name="TuMejorPuntaje">Tu mejor puntaje: </string>
    <string name="PuntajeMejor">000</string>
    <string name="TuPuntaje">Tu puntaje es: </string>
    <string name="PuntajeObtenido">000</string>
    <string name="btnReintentar">¿Jugar Otra Vez?</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="MejorPuntaje">Mejor Puntaje</string>
    <string name="UltimoPuntaje">Ultimo puntaje Obtenido</string>

    <!-- Messages Preferences -->
    <string name="ElMejorPuntaje">Mejor puntaje obtenido</string>
    <string name="ElUltimoPuntajeObtenido">El ultimo puntaje obtenido</string>

</resources>