<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_200"
    tools:context=".Perdiste">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="199dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="200dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TituloPerdiste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/singoroundedregular"
            android:text="@string/Perdiste"
            android:textAlignment="center"
            android:textColor="@color/color_A400"
            android:textSize="96sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ElMejorPuntaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TuMejorPuntaje"
                android:textColor="@color/color_800"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/PuntajeMejor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PuntajeMejor"
                android:textColor="@color/color_A200"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TuPuntaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TuPuntaje"
                android:textColor="@color/color_800"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/PuntajeObtenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PuntajeObtenido"
                android:textColor="@color/color_A200"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnIntentarOtraVez"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:text="@string/btnReintentar"
            app:cornerRadius="20dp"
            android:onClick="VolveraIntentarlo"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>