<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_100"
    tools:context=".ModoNormal">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Volumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_400"
        android:clickable="true"
        android:saveEnabled="true"
        app:fabSize="auto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Corte_bordes_BTNDerecha"
        app:srcCompat="@drawable/volume_up"
        tools:tint="@color/white"
        app:tint="@color/white"/>

    <TextView
        android:id="@+id/frace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/singoroundedregular"
        android:text="@string/frace"
        android:textAlignment="center"
        android:textColor="#454545"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tiempotext"
        android:layout_width="88dp"
        android:layout_height="73dp"
        android:layout_marginTop="168dp"
        android:fontFamily="@font/singoroundedregular"
        android:text="@string/tiempo"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="288dp"
        android:layout_height="91dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/corazon1"
            android:layout_width="71dp"
            android:layout_height="71dp"
            app:srcCompat="@drawable/heart_lleno"
            app:tint="#F13F42" />

        <ImageView
            android:id="@+id/corazon2"
            android:layout_width="71dp"
            android:layout_height="71dp"
            app:srcCompat="@drawable/heart_lleno"
            app:tint="#F13F42" />

        <ImageView
            android:id="@+id/corazon3"
            android:layout_width="71dp"
            android:layout_height="71dp"
            android:adjustViewBounds="false"
            app:srcCompat="@drawable/heart_lleno"
            app:tint="#F13F42" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Textofondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Nivel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:alpha="0.3"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/Nivel"
            android:textAlignment="center"
            android:textColor="#454545"
            android:textSize="90sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Contador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="0.3"
            android:fontFamily="@font/singoroundedregular"
            android:gravity="center"
            android:text="@string/contador"
            android:textColor="#454545"
            android:textSize="550sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>