<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Cuerpo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_200"
    tools:context=".Titulo_inicio">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Ajustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/icon_ajustes"
        tools:tint="@color/white"
        app:tint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/Volumen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Corte_bordes_BTNIzquierda" />

    <ImageView
        android:id="@+id/Logofondo"
        android:layout_width="728dp"
        android:layout_height="744dp"
        android:alpha="0.3"
        android:rotation="-4"
        android:rotationY="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505"
        app:srcCompat="@drawable/tirulo" />

    <ImageView
        android:id="@+id/logoprincipal"
        android:layout_width="wrap_content"
        android:layout_height="382dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629"
        app:srcCompat="@drawable/tirulo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Volumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_400"
        android:clickable="true"
        android:saveEnabled="true"
        app:fabSize="auto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Corte_bordes_BTNDerecha"
        app:srcCompat="@drawable/volume_up"
        tools:tint="@color/white"
        app:tint="@color/white"/>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="282dp"
        android:layout_height="136dp"
        android:layout_marginBottom="72dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/TituloOpciones"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/presstar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="IrModoNormal"
            android:text="@string/Modo1"
            app:cornerRadius="25dp" />

        <Button
            android:id="@+id/presstar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="IraMenu"
            android:text="@string/Modo2"
            app:cornerRadius="25dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>